Added go api notes

--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -1,2 +1,13 @@
 CPS (Communicating Sequential Processes)
 SSM (Shared Memory Multithreading)
+SPA (Single-page applications)
+Aas (API as a Service)
+REST (Representational State Transfer)
+CLI (Command-Line Iterface)
+SOAP (Simple Object Access Protocol)
+UDDI (Universal Description, Discovery, and Integration)
+WSDL (Web Services DEscription Language)
+CORS (Cross-Origin Resource Sharing)
+ROA (Response-Oriented Architecture)
+SOA (Service-Oriented Architecture)
+OAS (OpenAPI Specification)
