Added RPC, JSON-RPC and middleware in golang

--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -11,3 +11,5 @@ CORS (Cross-Origin Resource Sharing)
 ROA (Response-Oriented Architecture)
 SOA (Service-Oriented Architecture)
 OAS (OpenAPI Specification)
+RPC (Remote Procedure Call)
+CLF (Apache Common Log Format)
