--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -12,4 +12,6 @@ ROA (Response-Oriented Architecture)
 SOA (Service-Oriented Architecture)
 OAS (OpenAPI Specification)
 RPC (Remote Procedure Call)
+gRPC (Google RPC)
 CLF (Apache Common Log Format)
+BSON (Binary JSON)
