--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -10,6 +10,7 @@ WSDL (Web Services DEscription Language)
 CORS (Cross-Origin Resource Sharing)
 ROA (Response-Oriented Architecture)
 SOA (Service-Oriented Architecture)
+EDA (Event-driven Architecture)
 OAS (OpenAPI Specification)
 RPC (Remote Procedure Call)
 gRPC (Google RPC)
@@ -17,4 +18,5 @@ CLF (Apache Common Log Format)
 BSON (Binary JSON)
 AMQP (Advanced Message Queueing Protocol)
 SNS (Simple Notification Service)
+AES (Advanced Encryption Standard)
 
