Added more go notes

--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -21,4 +21,14 @@ SNS (Simple Notification Service)
 AES (Advanced Encryption Standard)
 CGI (Common Gateway Interface)
 IaC (Infrastructure as Code)
-
+SWE (Software Engineer)
+SDET (Software Development Engineer in Test)
+SRE (Site Reliability Engineer)
+RE (Release Engineer)
+BSP (Bulk Synchronous Parallel)
+SDLC (Software Development Lifecycle)
+CI (Continuous Integration)
+SLA (service-level agreement)
+CAMS (Culture, Automation, Measurement, and Sharing)
+OOPSLA (Object-Oriented Programing Systems, Languages, and Applications)
+AST (Abstract Syntax Tree)
