--- a/lang/go/notes.txt
+++ b/lang/go/notes.txt
@@ -61,3 +61,19 @@ src/
         stringuril/
             reverse.go   # package resource
    
+### Compile-time checks for ensuring a type implements a particular interface.
+```
+import "fmt"
+
+var (
+// Works but allocates a dummy Foo instance on the heap.
+_ fmt.Stringer = &Foo{}
+
+// Preferred way that does not allocate anything on the heap.
+_ fmt.Stringer = (*Foo)(nil)
+)
+
+type Foo struct { }
+
+func (*Foo) String() string { return "Foo" }
+```
