Added go versioning and linting notes

--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -32,3 +32,5 @@ SLA (service-level agreement)
 CAMS (Culture, Automation, Measurement, and Sharing)
 OOPSLA (Object-Oriented Programing Systems, Languages, and Applications)
 AST (Abstract Syntax Tree)
+SAT (Satisfiability Problem)
+CDCL (conflict-driven clause learning)
