--- a/lang/go/acronyms.txt
+++ b/lang/go/acronyms.txt
@@ -34,3 +34,4 @@ OOPSLA (Object-Oriented Programing Systems, Languages, and Applications)
 AST (Abstract Syntax Tree)
 SAT (Satisfiability Problem)
 CDCL (conflict-driven clause learning)
+BFS (breadth-first search)
