--- a/lang/sql/notes.txt
+++ b/lang/sql/notes.txt
@@ -73,3 +73,5 @@ sudo niutil -createprop / /users/mysql gid 74 # associated user with gid
 
 sudo chown -RL root:mysql /usr/local/mysql
 sudo chown -RL mysql:mysql /usr/local/mysql/data
+
+setenv PATH $PATH:/usr/local/mysql/bin
