Added additional aws questions & mmap in go

--- a/infra/aws/certified-developer/questions/s3.md
+++ b/infra/aws/certified-developer/questions/s3.md
@@ -215,3 +215,58 @@ D. Local Replication (LR)
 
 **Answer:** B
 **Explanation:** Same-Region Replication (SRR) replicates objects within the same AWS region.
+
+---
+
+### 21. What is S3 Batch Operations used for?
+A. Real-time event processing
+B. Performing large-scale operations on billions of objects
+C. Streaming data to S3
+D. Encrypting objects automatically
+
+**Answer:** B
+**Explanation:** S3 Batch Operations performs large-scale operations (copy, tag, restore, invoke Lambda) on billions of objects with a single request.
+
+---
+
+### 22. Which S3 feature prevents object deletion or overwrite for compliance requirements?
+A. Versioning
+B. Object Lock
+C. Bucket Policy
+D. Lifecycle Policy
+
+**Answer:** B
+**Explanation:** S3 Object Lock provides WORM (Write Once Read Many) protection with retention periods and legal holds to prevent deletion/overwrite.
+
+---
+
+### 23. What is the purpose of S3 Access Points?
+A. Accelerate uploads
+B. Simplify managing access to shared datasets with specific permissions
+C. Replicate data across regions
+D. Compress objects automatically
+
+**Answer:** B
+**Explanation:** S3 Access Points simplify data access management by creating unique hostnames with specific permissions for shared datasets.
+
+---
+
+### 24. Which S3 feature generates reports of object metadata and encryption status?
+A. S3 Analytics
+B. S3 Inventory
+C. S3 Select
+D. CloudWatch Metrics
+
+**Answer:** B
+**Explanation:** S3 Inventory generates scheduled reports containing object metadata, encryption status, replication status, and storage class.
+
+---
+
+### 25. What happens when Requester Pays is enabled on an S3 bucket?
+A. Bucket owner pays all costs
+B. Requester pays for requests and data transfer
+C. AWS provides free tier access
+D. Costs are split 50/50
+
+**Answer:** B
+**Explanation:** Requester Pays makes the requester (not bucket owner) pay for requests and data transfer costs.
