Added additional aws questions

--- a/infra/aws/certified-developer/questions/s3.md
+++ b/infra/aws/certified-developer/questions/s3.md
@@ -270,3 +270,279 @@ D. Costs are split 50/50
 
 **Answer:** B
 **Explanation:** Requester Pays makes the requester (not bucket owner) pay for requests and data transfer costs.
+
+---
+
+### 26. What is the maximum object size for a single PUT operation in S3?
+A. 100 MB
+B. 5 GB
+C. 10 GB
+D. 5 TB
+
+**Answer:** B
+**Explanation:** Single PUT operation supports up to 5 GB. Use multipart upload for objects larger than 5 GB (up to 5 TB).
+
+---
+
+### 27. Which S3 storage class is most cost-effective for infrequently accessed data with millisecond access?
+A. S3 Standard
+B. S3 Standard-IA
+C. S3 Glacier
+D. S3 Intelligent-Tiering
+
+**Answer:** B
+**Explanation:** S3 Standard-IA (Infrequent Access) provides millisecond access at lower cost for infrequently accessed data.
+
+---
+
+### 28. What is the minimum storage duration for S3 Glacier Flexible Retrieval?
+A. No minimum
+B. 30 days
+C. 90 days
+D. 180 days
+
+**Answer:** C
+**Explanation:** S3 Glacier Flexible Retrieval has a 90-day minimum storage duration charge.
+
+---
+
+### 29. Which S3 feature automatically transitions objects between storage classes?
+A. S3 Versioning
+B. S3 Lifecycle Policies
+C. S3 Replication
+D. S3 Inventory
+
+**Answer:** B
+**Explanation:** S3 Lifecycle Policies automatically transition objects between storage classes or delete them based on rules.
+
+---
+
+### 30. What is the maximum number of S3 buckets per AWS account by default?
+A. 10
+B. 50
+C. 100
+D. 1,000
+
+**Answer:** C
+**Explanation:** Default limit is 100 buckets per account (soft limit, can be increased).
+
+---
+
+### 31. Which S3 replication feature replicates existing objects?
+A. Cross-Region Replication (CRR)
+B. Same-Region Replication (SRR)
+C. S3 Batch Replication
+D. Automatic replication
+
+**Answer:** C
+**Explanation:** S3 Batch Replication replicates existing objects. CRR/SRR only replicate new objects by default.
+
+---
+
+### 32. What is the purpose of S3 Transfer Acceleration?
+A. Faster uploads using CloudFront edge locations
+B. Compress files
+C. Encrypt transfers
+D. Batch transfers
+
+**Answer:** A
+**Explanation:** Transfer Acceleration uses CloudFront edge locations to accelerate uploads to S3 over long distances.
+
+---
+
+### 33. Which S3 feature prevents accidental object deletion?
+A. Versioning with MFA Delete
+B. Object Lock
+C. Bucket Policies
+D. Both A and B
+
+**Answer:** D
+**Explanation:** Both Versioning with MFA Delete and Object Lock prevent accidental/malicious deletion.
+
+---
+
+### 34. What is the maximum size of S3 object metadata?
+A. 2 KB
+B. 8 KB
+C. 16 KB
+D. 64 KB
+
+**Answer:** A
+**Explanation:** S3 object metadata (user-defined) is limited to 2 KB.
+
+---
+
+### 35. Which S3 storage class has no retrieval fee?
+A. S3 Standard
+B. S3 Standard-IA
+C. S3 Glacier
+D. S3 Glacier Deep Archive
+
+**Answer:** A
+**Explanation:** S3 Standard has no retrieval fees. All other classes charge for data retrieval.
+
+---
+
+### 36. What is the purpose of S3 Multipart Upload?
+A. Upload multiple files
+B. Upload large files in parts for reliability and performance
+C. Upload to multiple buckets
+D. Encrypt uploads
+
+**Answer:** B
+**Explanation:** Multipart Upload splits large files into parts for parallel upload, improving performance and reliability.
+
+---
+
+### 37. Which S3 event notification destination is NOT supported?
+A. SNS
+B. SQS
+C. Lambda
+D. Kinesis Data Streams
+
+**Answer:** D
+**Explanation:** S3 event notifications support SNS, SQS, and Lambda. Use EventBridge for Kinesis integration.
+
+---
+
+### 38. What is the minimum part size for S3 Multipart Upload (except last part)?
+A. 1 MB
+B. 5 MB
+C. 10 MB
+D. 100 MB
+
+**Answer:** B
+**Explanation:** Minimum part size is 5 MB (except the last part, which can be smaller).
+
+---
+
+### 39. Which S3 feature provides automatic cost optimization?
+A. S3 Lifecycle
+B. S3 Intelligent-Tiering
+C. S3 Analytics
+D. S3 Inventory
+
+**Answer:** B
+**Explanation:** S3 Intelligent-Tiering automatically moves objects between access tiers based on usage patterns.
+
+---
+
+### 40. What is the maximum number of tags per S3 object?
+A. 5
+B. 10
+C. 50
+D. 100
+
+**Answer:** B
+**Explanation:** S3 objects can have up to 10 tags (key-value pairs).
+
+---
+
+### 41. Which S3 feature analyzes access patterns?
+A. S3 Analytics Storage Class Analysis
+B. S3 Inventory
+C. CloudWatch
+D. CloudTrail
+
+**Answer:** A
+**Explanation:** S3 Analytics analyzes access patterns to help optimize storage class transitions.
+
+---
+
+### 42. What is the purpose of S3 Select?
+A. Select storage class
+B. Retrieve subset of object data using SQL expressions
+C. Select buckets
+D. Select regions
+
+**Answer:** B
+**Explanation:** S3 Select retrieves a subset of object data using SQL expressions, reducing data transfer.
+
+---
+
+### 43. Which S3 encryption method requires managing encryption keys outside AWS?
+A. SSE-S3
+B. SSE-KMS
+C. SSE-C (Customer-provided keys)
+D. Client-side encryption
+
+**Answer:** C
+**Explanation:** SSE-C requires customers to provide and manage encryption keys (AWS doesn't store keys).
+
+---
+
+### 44. What is the maximum number of prefixes for optimal S3 performance?
+A. 10
+B. 100
+C. 1,000
+D. Unlimited (3,500 PUT/COPY/POST/DELETE and 5,500 GET/HEAD per prefix)
+
+**Answer:** D
+**Explanation:** S3 supports unlimited prefixes, each providing 3,500 PUT and 5,500 GET requests per second.
+
+---
+
+### 45. Which S3 feature provides compliance and regulatory data retention?
+A. Versioning
+B. Object Lock (Compliance mode)
+C. Glacier Vault Lock
+D. Both B and C
+
+**Answer:** D
+**Explanation:** Both S3 Object Lock (Compliance mode) and Glacier Vault Lock provide WORM (Write Once Read Many) for compliance.
+
+---
+
+### 46. What is the purpose of S3 Presigned URLs?
+A. Compress URLs
+B. Grant temporary access to private objects
+C. Shorten URLs
+D. Encrypt URLs
+
+**Answer:** B
+**Explanation:** Presigned URLs grant time-limited access to private S3 objects without changing permissions.
+
+---
+
+### 47. Which S3 storage class is most cost-effective for archival with rare access?
+A. S3 Glacier Flexible Retrieval
+B. S3 Glacier Deep Archive
+C. S3 Standard-IA
+D. S3 One Zone-IA
+
+**Answer:** B
+**Explanation:** S3 Glacier Deep Archive is the lowest-cost storage for long-term archival (12-hour retrieval).
+
+---
+
+### 48. What is the maximum number of lifecycle rules per S3 bucket?
+A. 10
+B. 100
+C. 1,000
+D. Unlimited
+
+**Answer:** C
+**Explanation:** S3 buckets support up to 1,000 lifecycle rules.
+
+---
+
+### 49. Which S3 feature prevents public access at the account level?
+A. Bucket Policies
+B. S3 Block Public Access
+C. IAM Policies
+D. ACLs
+
+**Answer:** B
+**Explanation:** S3 Block Public Access provides account-level and bucket-level settings to prevent public access.
+
+---
+
+### 50. What is the purpose of S3 Same-Region Replication (SRR)?
+A. Backup within same region
+B. Replicate objects within the same region for compliance, log aggregation, or live replication
+C. Reduce costs
+D. Improve performance
+
+**Answer:** B
+**Explanation:** SRR replicates objects within the same region for compliance, log aggregation, or live replication between accounts.
+
